--- a/index.html
+++ b/index.html
@@ -1499,7 +1499,7 @@
                 Even if they did, their sites were built by someone who wasn't always up to date in their design or marketing trends. So I decided I needed to come up with a solution and that solution was my $0 down and $170 a month model.
                   <br />
                   <br />
-                  I knew that this would be more managable for a small business because it gives them a chance to appreciate the results faster. With a model like this, if the website brings in just one customer for your business then it has paid for itself already. With paying a lumpsum it could take months or a year before you see the website pay off.
+                  I knew this would be more managable for a small business because it gives them a chance to appreciate the results faster. With this model, if the website brings in just one customer for your business then it has paid for itself already. Paying a lumpsum could take months or a year before you see the website pay off.
                 </p>
 
                 <!-- <a
@@ -1687,47 +1687,12 @@
                 What We Do
               </h2>
               <p class="text-base text-body-color dark:text-dark-6">
-                We specialize in web design and development with many business types anywhere in the US. Every website we build is 100% hand-coded to ensure the best quality, which helps bring in more customers to your site and bring more revenue to your business.
+                We specialize in web design and development with many business types everywhere in the US. Every website we build is 100% hand-coded to ensure the best quality, which helps bring in more customers to your site and bring more revenue to your business.
               </p>
             </div>
           </div>
         </div>
-        <div class="flex flex-wrap -mx-4">
-          <div class="w-full px-4 md:w-1/2 lg:w-1/4">
-            <div class="mb-12 wow fadeInUp group" data-wow-delay=".1s">
-              <div
-                class="relative z-10 mb-10 flex h-[70px] w-[70px] items-center justify-center rounded-[14px] bg-primary"
-              >
-                <span
-                  class="absolute left-0 top-0 -z-[1] mb-8 flex h-[70px] w-[70px] rotate-[25deg] items-center justify-center rounded-[14px] bg-primary bg-opacity-20 duration-300 group-hover:rotate-45"
-                ></span>
-                <svg
-                  width="37"
-                  height="37"
-                  viewBox="0 0 37 37"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    d="M30.5801 8.30514H27.9926C28.6113 7.85514 29.1176 7.34889 29.3426 6.73014C29.6801 5.88639 29.6801 4.48014 27.9363 2.84889C26.0801 1.04889 24.3926 1.04889 23.3238 1.33014C20.9051 1.94889 19.2738 4.76139 18.3738 6.78639C17.4738 4.76139 15.8426 2.00514 13.4238 1.33014C12.3551 1.04889 10.6676 1.10514 8.81133 2.84889C7.06758 4.53639 7.12383 5.88639 7.40508 6.73014C7.63008 7.34889 8.13633 7.85514 8.75508 8.30514H5.71758C4.08633 8.30514 2.73633 9.65514 2.73633 11.2864V14.9989C2.73633 16.5739 4.03008 17.8676 5.60508 17.9239V31.6489C5.60508 33.5614 7.18008 35.1926 9.14883 35.1926H27.5426C29.4551 35.1926 31.0863 33.6176 31.0863 31.6489V17.8676C32.4926 17.6426 33.5613 16.4051 33.5613 14.9426V11.2301C33.5613 9.59889 32.2113 8.30514 30.5801 8.30514ZM23.9426 3.69264C23.9988 3.69264 24.1676 3.63639 24.3363 3.63639C24.7301 3.63639 25.3488 3.80514 26.1926 4.59264C26.8676 5.21139 27.0363 5.66139 26.9801 5.77389C26.6988 6.56139 23.8863 7.40514 20.6801 7.74264C21.4676 5.99889 22.6488 4.03014 23.9426 3.69264ZM10.4988 4.64889C11.3426 3.86139 11.9613 3.69264 12.3551 3.69264C12.5238 3.69264 12.6363 3.74889 12.7488 3.74889C14.0426 4.08639 15.2801 5.99889 16.0676 7.79889C12.8613 7.46139 10.0488 6.61764 9.76758 5.83014C9.71133 5.66139 9.88008 5.26764 10.4988 4.64889ZM5.26758 14.9426V11.2301C5.26758 11.0051 5.43633 10.7801 5.71758 10.7801H30.5801C30.8051 10.7801 31.0301 10.9489 31.0301 11.2301V14.9426C31.0301 15.1676 30.8613 15.3926 30.5801 15.3926H5.71758C5.49258 15.3926 5.26758 15.2239 5.26758 14.9426ZM27.5426 32.6614H9.14883C8.58633 32.6614 8.13633 32.2114 8.13633 31.6489V17.9239H28.4988V31.6489C28.5551 32.2114 28.1051 32.6614 27.5426 32.6614Z"
-                    fill="white"
-                  />
-                </svg>
-              </div>
-              <h4 class="mb-3 text-xl font-bold text-dark dark:text-white">
-                Free and Open-Source
-              </h4>
-              <p class="mb-8 text-body-color dark:text-dark-6 lg:mb-9">
-                Lorem Ipsum is simply dummy text of the printing and industry.
-              </p>
-              <a
-                href="javascript:void(0)"
-                class="text-base font-medium text-dark hover:text-primary dark:text-white dark:hover:text-primary"
-              >
-                Learn More
-              </a>
-            </div>
-          </div>
+        <div class="flex flex-wrap justify-center -mx-4">
           <div class="w-full px-4 md:w-1/2 lg:w-1/4">
             <div class="mb-12 wow fadeInUp group" data-wow-delay=".15s">
               <div
@@ -1750,17 +1715,11 @@
                 </svg>
               </div>
               <h4 class="mb-3 text-xl font-bold text-dark dark:text-white">
-                Multipurpose Template
+                Built for Mobile First
               </h4>
               <p class="mb-8 text-body-color dark:text-dark-6 lg:mb-9">
-                Lorem Ipsum is simply dummy text of the printing and industry.
+                Our first focus is to ensure your site is designed to fit on mobile screens. After that we add the tablet and desktop design.
               </p>
-              <a
-                href="javascript:void(0)"
-                class="text-base font-medium text-dark hover:text-primary dark:text-white dark:hover:text-primary"
-              >
-                Learn More
-              </a>
             </div>
           </div>
           <div class="w-full px-4 md:w-1/2 lg:w-1/4">
@@ -1817,17 +1776,11 @@
                 </svg>
               </div>
               <h4 class="mb-3 text-xl font-bold text-dark dark:text-white">
-                High-quality Design
+                User-Friendly Pages
               </h4>
               <p class="mb-8 text-body-color dark:text-dark-6 lg:mb-9">
-                Lorem Ipsum is simply dummy text of the printing and industry.
+                Our user-friendly designs make your website easy to use which will convert visitors into customers for your business.
               </p>
-              <a
-                href="javascript:void(0)"
-                class="text-base font-medium text-dark hover:text-primary dark:text-white dark:hover:text-primary"
-              >
-                Learn More
-              </a>
             </div>
           </div>
           <div class="w-full px-4 md:w-1/2 lg:w-1/4">
@@ -1864,17 +1817,11 @@
                 </svg>
               </div>
               <h4 class="mb-3 text-xl font-bold text-dark dark:text-white">
-                All Essential Elements
+                Unlimited Edits
               </h4>
               <p class="mb-8 text-body-color dark:text-dark-6 lg:mb-9">
-                Lorem Ipsum is simply dummy text of the printing and industry.
+                Change anything you want at anytime and it will be delivered that day.
               </p>
-              <a
-                href="javascript:void(0)"
-                class="text-base font-medium text-dark hover:text-primary dark:text-white dark:hover:text-primary"
-              >
-                Learn More
-              </a>
             </div>
           </div>
         </div>
@@ -1894,7 +1841,7 @@
                 <h2
                   class="mb-2.5 text-3xl font-bold text-white md:text-[38px] md:leading-[1.44]"
                 >
-                  <span>What Are You Looking For?</span>
+                  <span>Ready to take the next step?</span><br/>
                   <span class="text-3xl font-normal md:text-[40px]">
                     Get Started Now
                   </span>
@@ -1902,14 +1849,13 @@
                 <p
                   class="mx-auto mb-6 max-w-[515px] text-base leading-[1.5] text-white"
                 >
-                  There are many variations of passages of Lorem Ipsum but the
-                  majority have suffered in some form.
+                 We understand spending your hard earned money for a website may seem like taking a leap into the unknown. Coming from a small business we completely understand. Once we schedule a call you'll understand that we're committed to your long-term success.
                 </p>
                 <a
-                  href="javascript:void(0)"
+                  href="#contact"
                   class="inline-block rounded-md border border-transparent bg-secondary px-7 py-3 text-base font-medium text-white transition hover:bg-[#0BB489]"
                 >
-                  Start using Play
+                  Contact Us Today
                 </a>
               </div>
             </div>
@@ -4416,58 +4362,30 @@
                   Let's talk about your problem.
                 </h2>
               </div>
-              <div class="flex flex-wrap justify-between mb-12 lg:mb-0">
+              <div class="flex flex-wrap mb-12 lg:mb-0">
                 <div class="mb-8 flex w-[330px] max-w-full">
-                  <div class="mr-6 text-[32px] text-primary">
-                    <svg
-                      width="29"
-                      height="35"
-                      viewBox="0 0 29 35"
-                      class="fill-current"
-                    >
-                      <path
-                        d="M14.5 0.710938C6.89844 0.710938 0.664062 6.72656 0.664062 14.0547C0.664062 19.9062 9.03125 29.5859 12.6406 33.5234C13.1328 34.0703 13.7891 34.3437 14.5 34.3437C15.2109 34.3437 15.8672 34.0703 16.3594 33.5234C19.9688 29.6406 28.3359 19.9062 28.3359 14.0547C28.3359 6.67188 22.1016 0.710938 14.5 0.710938ZM14.9375 32.2109C14.6641 32.4844 14.2812 32.4844 14.0625 32.2109C11.3828 29.3125 2.57812 19.3594 2.57812 14.0547C2.57812 7.71094 7.9375 2.625 14.5 2.625C21.0625 2.625 26.4219 7.76562 26.4219 14.0547C26.4219 19.3594 17.6172 29.2578 14.9375 32.2109Z"
-                      />
-                      <path
-                        d="M14.5 8.58594C11.2734 8.58594 8.59375 11.2109 8.59375 14.4922C8.59375 17.7188 11.2187 20.3984 14.5 20.3984C17.7812 20.3984 20.4062 17.7734 20.4062 14.4922C20.4062 11.2109 17.7266 8.58594 14.5 8.58594ZM14.5 18.4297C12.3125 18.4297 10.5078 16.625 10.5078 14.4375C10.5078 12.25 12.3125 10.4453 14.5 10.4453C16.6875 10.4453 18.4922 12.25 18.4922 14.4375C18.4922 16.625 16.6875 18.4297 14.5 18.4297Z"
-                      />
-                    </svg>
-                  </div>
+                  
                   <div>
                     <h5
                       class="mb-[18px] text-lg font-semibold text-dark dark:text-white"
                     >
-                      Our Location
+                      Phone
                     </h5>
                     <p class="text-base text-body-color dark:text-dark-6">
-                      401 Broadway, 24th Floor, Orchard Cloud View, London
+                      (256) 522-3259
                     </p>
                   </div>
                 </div>
                 <div class="mb-8 flex w-[330px] max-w-full">
-                  <div class="mr-6 text-[32px] text-primary">
-                    <svg
-                      width="34"
-                      height="25"
-                      viewBox="0 0 34 25"
-                      class="fill-current"
-                    >
-                      <path
-                        d="M30.5156 0.960938H3.17188C1.42188 0.960938 0 2.38281 0 4.13281V20.9219C0 22.6719 1.42188 24.0938 3.17188 24.0938H30.5156C32.2656 24.0938 33.6875 22.6719 33.6875 20.9219V4.13281C33.6875 2.38281 32.2656 0.960938 30.5156 0.960938ZM30.5156 2.875C30.7891 2.875 31.0078 2.92969 31.2266 3.09375L17.6094 11.3516C17.1172 11.625 16.5703 11.625 16.0781 11.3516L2.46094 3.09375C2.67969 2.98438 2.89844 2.875 3.17188 2.875H30.5156ZM30.5156 22.125H3.17188C2.51562 22.125 1.91406 21.5781 1.91406 20.8672V5.00781L15.0391 12.9922C15.5859 13.3203 16.1875 13.4844 16.7891 13.4844C17.3906 13.4844 17.9922 13.3203 18.5391 12.9922L31.6641 5.00781V20.8672C31.7734 21.5781 31.1719 22.125 30.5156 22.125Z"
-                      />
-                    </svg>
-                  </div>
+                  
                   <div>
                     <h5
                       class="mb-[18px] text-lg font-semibold text-dark dark:text-white"
                     >
-                      How Can We Help?
+                      Email
                     </h5>
                     <p class="text-base text-body-color dark:text-dark-6">
-                      info@yourdomain.com
-                    </p>
-                    <p class="mt-1 text-base text-body-color dark:text-dark-6">
-                      contact@yourdomain.com
+                      workhardwebdesign@gmail.com
                     </p>
                   </div>
                 </div>
