--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@
         <div class="relative flex items-center justify-between -mx-4">
           <div class="max-w-full px-4 w-60">
             <a href="index.html" class="block w-full py-5 navbar-logo">
-              Work Hard Web Design
+              <img
+              src="assets/images/logo/Work.png"
+              alt="logo"
+              class="w-full header-logo"
+            />
             </a>
           </div>
           <div class="flex items-center justify-between w-full px-4">
@@ -96,14 +100,14 @@
                     Portfolio
                   </a>
                 </li>
-                <li class="relative group">
+                <!-- <li class="relative group">
                   <a
                     href="#blog"
                     class="flex py-2 mx-8 text-base font-medium ud-menu-scroll text-dark group-hover:text-primary dark:text-white lg:ml-7 lg:mr-0 lg:inline-flex lg:px-0 lg:py-6 lg:text-white lg:group-hover:text-white lg:group-hover:opacity-70 xl:ml-10"
                   >
                     Blog
                   </a>
-                </li>
+                </li> -->
                   <li class="relative group">
                     <a
                       href="#contact"
@@ -112,7 +116,7 @@
                       Contact
                     </a>
                   </li>
-                  <li class="relative submenu-item group">
+                  <!-- <li class="relative submenu-item group">
                     <a
                       href="javascript:void(0)"
                       class="relative flex items-center justify-between py-2 mx-8 text-base font-medium text-dark group-hover:text-primary dark:text-white lg:ml-8 lg:mr-0 lg:inline-flex lg:py-6 lg:pl-0 lg:pr-4 lg:text-white lg:group-hover:text-white lg:group-hover:opacity-70 xl:ml-10"
@@ -184,7 +188,7 @@
                         404 Page
                       </a>
                     </div>
-                  </li>
+                  </li> -->
                 </ul>
               </nav>
             </div>
@@ -1820,7 +1824,7 @@
                 Unlimited Edits
               </h4>
               <p class="mb-8 text-body-color dark:text-dark-6 lg:mb-9">
-                Change anything you want at anytime and it will be delivered that day.
+                Change anything you want at anytime and we will deliver it that day.
               </p>
             </div>
           </div>
@@ -1930,6 +1934,129 @@
     </section>
     <!-- ====== CTA Section End -->
 
+       <!-- ====== Team Section Start -->
+    <section
+      id="portfolio"
+      class="overflow-hidden bg-gray-1 pb-12 pt-20 dark:bg-dark-2 lg:pb-[90px] lg:pt-[120px]"
+    >
+      <div class="container mx-auto">
+        <div class="flex flex-wrap -mx-4">
+          <div class="w-full px-4">
+            <div class="mx-auto mb-[60px] max-w-[485px] text-center">
+              <span class="block mb-2 text-lg font-semibold text-primary">
+                Our Work
+              </span>
+              <h2
+                class="mb-3 text-3xl font-bold leading-[1.2] text-dark dark:text-white sm:text-4xl md:text-[40px]"
+              >
+                Sample Sites We Can Build For Your Small Businesses
+              </h2>
+              <!-- <p class="text-base text-body-color dark:text-dark-6">
+                There are many variations of passages of Lorem Ipsum available
+                but the majority have suffered alteration in some form.
+              </p> -->
+            </div>
+          </div>
+        </div>
+        <div class="flex flex-wrap justify-center -mx-4">
+          <div class="w-full px-4 sm:w-1/2 lg:w-1/4 xl:w-1/4">
+            <div
+              class="px-0 pb-10 mb-8 bg-white group rounded-xl shadow-testimonial dark:bg-dark dark:shadow-none"
+            >
+              <div class="relative z-10 w-full h-full mx-auto mb-5">
+                <img
+                  src="./assets/images/team/Gibb_s-Landscape-Co..jpg"
+                  alt="team image"
+                  class="w-full h-full rounded-xl "
+                />
+              </div>
+              <div class="text-center">
+                <h4
+                  class="mb-1 text-lg font-semibold text-dark dark:text-white"
+                >
+                Gibb's Landscape Co.
+                </h4>
+                <p class="mb-5 text-sm text-body-color dark:text-dark-6">
+                  Gibbs Landscape Company is known as Atlanta's premier landscape design/build and maintenance company.
+                </p>
+                <div class="flex items-center justify-center gap-5">
+                  <a
+                  href="https://gibbslandscape.com/"
+                  class="inline-block rounded-md border border-transparent bg-primary px-7 py-3 text-base font-medium text-white transition hover:bg-[#abd7f0]"
+                >
+                  View Sample Site
+                </a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="w-full px-4 sm:w-1/2 lg:w-1/4 xl:w-1/4">
+            <div
+              class="px-0 pb-10 mb-8 bg-white group rounded-xl shadow-testimonial dark:bg-dark dark:shadow-none"
+            >
+              <div class="relative z-10 w-full h-full mx-auto mb-5">
+                <img
+                  src="./assets/images/team/Dr.-Alexis-Shields.jpg"
+                  alt="team image"
+                  class="w-full h-full rounded-xl "
+                />
+              </div>
+              <div class="text-center">
+                <h4
+                  class="mb-1 text-lg font-semibold text-dark dark:text-white"
+                >
+                  Dr. Alexis Shields
+                </h4>
+                <p class="mb-5 text-sm text-body-color dark:text-dark-6">
+                  Dr. Alexis is a naturopathic physician specializing reducing health risks using an advanced assessment of basic blood work. 
+                </p>
+                <div class="flex items-center justify-center gap-5">
+                  <a
+                  href="https://dralexisshields.com/"
+                  class="inline-block rounded-md border border-transparent bg-primary px-7 py-3 text-base font-medium text-white transition hover:bg-[#abd7f0]"
+                >
+                  View Sample Site
+                </a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="w-full px-4 sm:w-1/2 lg:w-1/4 xl:w-1/4">
+            <div
+              class="px-0 pb-10 mb-8 bg-white group rounded-xl shadow-testimonial dark:bg-dark dark:shadow-none"
+            >
+              <div class="relative z-10 w-full h-full mx-auto mb-5">
+                <img
+                  src="./assets/images/team/Connect-Homes2022.jpeg"
+                  alt="team image"
+                  class="w-full h-full rounded-xl "
+                />
+              </div>
+              <div class="text-center">
+                <h4
+                  class="mb-1 text-lg font-semibold text-dark dark:text-white"
+                >
+                  Connect Homes
+                </h4>
+                <p class="mb-5 text-sm text-body-color dark:text-dark-6">
+                  Connect Homes is a prefabricated home manufacturer that's revolutionizing the housing market. 
+                </p>
+                <div class="flex items-center justify-center gap-5">
+                  <a
+                  href="https://www.connect-homes.com/"
+                  class="inline-block rounded-md border border-transparent bg-primary px-7 py-3 text-base font-medium text-white transition hover:bg-[#abd7f0]"
+                >
+                  View Sample Site
+                </a>
+                </div>
+              </div>
+            </div>
+           </div>
+        </div>
+      </div>
+    </section>
+    <!-- ====== Team Section End -->
+
     <!-- ====== Pricing Section Start -->
     <section
       id="pricing"
@@ -1940,40 +2067,34 @@
           <div class="w-full px-4">
             <div class="mx-auto mb-[60px] max-w-[510px] text-center">
               <span class="block mb-2 text-lg font-semibold text-primary">
-                Pricing Table
+                Pricing
               </span>
               <h2
                 class="mb-3 text-3xl font-bold text-dark dark:text-white sm:text-4xl md:text-[40px] md:leading-[1.2]"
               >
-                Awesome Pricing Plan
+              <span class="text-primary">$0</span> Down <span class="text-primary">$170</span> Per Month,
+              <br/> 6 Month Minimum Contract
               </h2>
               <p class="text-base text-body-color dark:text-dark-6">
-                There are many variations of passages of Lorem Ipsum available
-                but the majority have suffered alteration in some form.
               </p>
             </div>
           </div>
         </div>
         <div class="flex flex-wrap justify-center -mx-4">
-          <div class="w-full px-4 md:w-1/2 lg:w-1/3">
+          <!-- <div class="w-full px-4 md:w-1/2 lg:w-1/3">
             <div
               class="relative z-10 px-8 py-10 mb-10 overflow-hidden bg-white rounded-xl shadow-pricing dark:bg-dark-2 sm:p-12 lg:px-6 lg:py-10 xl:p-14"
             >
               <span
                 class="block mb-5 text-xl font-medium text-dark dark:text-white"
               >
-                Starter
+                Web App / Ecommerce
               </span>
               <h2
                 class="mb-11 text-4xl font-semibold text-dark dark:text-white xl:text-[42px] xl:leading-[1.21]"
               >
                 <span class="text-xl font-medium">$</span>
-                <span class="-ml-1 -tracking-[2px]">25.00</span>
-                <span
-                  class="text-base font-normal text-body-color dark:text-dark-6"
-                >
-                  Per Month
-                </span>
+                <span class="-ml-1 -tracking-[2px]">5k</span>
               </h2>
               <div class="mb-[50px]">
                 <h5 class="mb-5 text-lg font-medium text-dark dark:text-white">
@@ -2001,26 +2122,26 @@
                 Purchase Now
               </a>
             </div>
-          </div>
+          </div> -->
           <div class="w-full px-4 md:w-1/2 lg:w-1/3">
             <div
               class="relative z-10 px-8 py-10 mb-10 overflow-hidden bg-white rounded-xl shadow-pricing dark:bg-dark-2 sm:p-12 lg:px-6 lg:py-10 xl:p-14"
             >
               <p
-                class="absolute right-[-50px] top-[60px] inline-block -rotate-90 rounded-bl-md rounded-tl-md bg-primary px-5 py-2 text-base font-medium text-white"
+                class="absolute right-[-50px] top-[60px] inline-block -rotate-90 rounded-bl-md rounded-tl-md bg-secondary px-5 py-2 text-base font-medium text-black"
               >
                 Recommended
               </p>
               <span
                 class="block mb-5 text-xl font-medium text-dark dark:text-white"
               >
-                Basic
+                Standard Web Design
               </span>
               <h2
                 class="mb-11 text-4xl font-semibold text-dark dark:text-white xl:text-[42px] xl:leading-[1.21]"
               >
                 <span class="text-xl font-medium">$</span>
-                <span class="-ml-1 -tracking-[2px]">59.00</span>
+                <span class="-ml-1 -tracking-[2px]">170</span>
                 <span
                   class="text-base font-normal text-body-color dark:text-dark-6"
                 >
@@ -2033,24 +2154,27 @@
                 </h5>
                 <div class="flex flex-col gap-[14px]">
                   <p class="text-base text-body-color dark:text-dark-6">
-                    Up to 1 User
+                    5 Pages
                   </p>
                   <p class="text-base text-body-color dark:text-dark-6">
-                    All UI components
+                    Logo Design
                   </p>
                   <p class="text-base text-body-color dark:text-dark-6">
-                    Lifetime access
+                    Hosting Included
                   </p>
                   <p class="text-base text-body-color dark:text-dark-6">
-                    Free updates
+                    24/7 Customer Service
+                  </p>
+                  <p class="text-base text-body-color dark:text-dark-6">
+                    Unlimited Updates and Edits
                   </p>
                 </div>
               </div>
               <a
-                href="javascript:void(0)"
+                href="#contact"
                 class="inline-block py-3 text-base font-medium text-center text-white transition rounded-md bg-primary px-7 hover:bg-blue-dark"
               >
-                Purchase Now
+                Connect With Us
               </a>
             </div>
           </div>
@@ -2061,13 +2185,13 @@
               <span
                 class="block mb-5 text-xl font-medium text-dark dark:text-white"
               >
-                Premium
+                Single Landing Page
               </span>
               <h2
                 class="mb-11 text-4xl font-semibold text-dark dark:text-white xl:text-[42px] xl:leading-[1.21]"
               >
                 <span class="text-xl font-medium">$</span>
-                <span class="-ml-1 -tracking-[2px]">99.00</span>
+                <span class="-ml-1 -tracking-[2px]">130</span>
                 <span
                   class="text-base font-normal text-body-color dark:text-dark-6"
                 >
@@ -2080,24 +2204,27 @@
                 </h5>
                 <div class="flex flex-col gap-[14px]">
                   <p class="text-base text-body-color dark:text-dark-6">
-                    Up to 1 User
+                    Single Page
                   </p>
                   <p class="text-base text-body-color dark:text-dark-6">
-                    All UI components
+                    Logo Design
                   </p>
                   <p class="text-base text-body-color dark:text-dark-6">
-                    Lifetime access
+                    Hosting Included
                   </p>
                   <p class="text-base text-body-color dark:text-dark-6">
-                    Free updates
+                    24/7 Customer Service
+                  </p>
+                  <p class="text-base text-body-color dark:text-dark-6">
+                    Unlimited Updates and Edits
                   </p>
                 </div>
               </div>
               <a
-                href="javascript:void(0)"
+                href="#contact"
                 class="inline-block py-3 text-base font-medium text-center text-white transition rounded-md bg-primary px-7 hover:bg-blue-dark"
               >
-                Purchase Now
+                Connect With Us
               </a>
             </div>
           </div>
@@ -2107,7 +2234,7 @@
     <!-- ====== Pricing Section End -->
 
     <!-- ====== Testimonial Section Start -->
-    <section
+    <!-- <section
       id="testimonials"
       class="overflow-hidden bg-gray-1 py-20 dark:bg-dark-2 md:py-[120px]"
     >
@@ -2495,11 +2622,11 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- ====== Testimonial Section End -->
 
     <!-- ====== FAQ Section Start -->
-    <section
+    <!-- <section
       class="relative z-20 overflow-hidden bg-white pb-8 pt-20 dark:bg-dark lg:pb-[50px] lg:pt-[120px]"
     >
       <div class="container mx-auto">
@@ -3256,7 +3383,7 @@
     <!-- ====== FAQ Section End -->
 
     <!-- ====== Team Section Start -->
-    <section
+    <!-- <section
       id="team"
       class="overflow-hidden bg-gray-1 pb-12 pt-20 dark:bg-dark-2 lg:pb-[90px] lg:pt-[120px]"
     >
@@ -4206,11 +4333,11 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- ====== Team Section End -->
 
     <!-- ====== Blog Section Start -->
-    <section class="bg-white pb-10 pt-20 dark:bg-dark lg:pb-20 lg:pt-[120px]">
+    <!-- <section class="bg-white pb-10 pt-20 dark:bg-dark lg:pb-20 lg:pt-[120px]">
       <div class="container mx-auto">
         <div class="flex flex-wrap justify-center -mx-4">
           <div class="w-full px-4">
@@ -4335,7 +4462,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- ====== Blog Section End -->
 
     <!-- ====== Contact Start ====== -->
@@ -4354,12 +4481,12 @@
                 <span
                   class="block mb-6 text-base font-medium text-dark dark:text-white"
                 >
-                  CONTACT US
+                  CONTACT WORK HARD WEB DESIGN
                 </span>
                 <h2
-                  class="max-w-[260px] text-[35px] font-semibold leading-[1.14] text-dark dark:text-white"
+                  class="max-w-[590px] text-[35px] font-semibold leading-[1.14] text-dark dark:text-white"
                 >
-                  Let's talk about your problem.
+                  Let us work on your website so you can focus on your customers.
                 </h2>
               </div>
               <div class="flex flex-wrap mb-12 lg:mb-0">
@@ -4468,12 +4595,16 @@
             </div>
           </div>
         </div>
+        <br/>
+        <br/>
+        <br/>
+        <span class="dark:text-dark-6">Copyright © 2024 | Work Hard Web Design | All Rights Reserved</span>
       </div>
     </section>
     <!-- ====== Contact End ====== -->
 
     <!-- ====== Brands Section Start -->
-    <section class="pb-20 dark:bg-dark">
+    <!-- <section class="pb-20 dark:bg-dark">
       <div class="container px-4">
         <div
           class="flex flex-wrap items-center justify-center gap-8 -mx-4 xl:gap-11"
@@ -4540,12 +4671,12 @@
           </a>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- ====== Brands Section End -->
 
     <!-- ====== Footer Section Start -->
-    <footer
-      class="wow fadeInUp relative z-10 bg-[#090E34] pt-20 lg:pt-[100px]"
+    <!-- <footer
+      class="wow fadeInUp relative z-10 bg-[#090E34] pt-20 lg:pt-[0px]"
       data-wow-delay=".15s"
     >
       <div class="container">
@@ -4557,7 +4688,7 @@
                 class="mb-6 inline-block max-w-[160px]"
               >
                 <img
-                  src="assets/images/logo/logo-white.svg"
+                  src="assets/images/logo/work.png"
                   alt="logo"
                   class="max-w-full"
                 />
@@ -5120,7 +5251,7 @@
           </svg>
         </span>
       </div>
-    </footer>
+    </footer> -->
     <!-- ====== Footer Section End -->
 
     <!-- ====== Back To Top Start -->
@@ -5135,7 +5266,7 @@
     <!-- ====== Back To Top End -->
 
     <!-- ====== Made With Button Start -->
-    <a
+    <!-- <a
       target="_blank"
       rel="nofollow noopener"
       class="fixed bottom-8 left-4 z-[999] inline-flex items-center gap-[10px] rounded-lg bg-white px-[14px] py-2 shadow-2 dark:bg-dark-2 sm:left-9"
@@ -5157,7 +5288,7 @@
           class="hidden dark:block"
         />
       </span>
-    </a>
+    </a> -->
     <!-- ====== Made With Button End -->
 
     <!-- ====== All Scripts -->
